big-object/objects/Blimp__b.object
<CustomObject>
    <label>Blimp</label>
    <pluralLabel>Blimpies</pluralLabel>
    <fields>
        <fullName>Altitude__c</fullName>
        <inlineHelpText>Max altitude of Blimp (km)</inlineHelpText>
        <label>Altitude</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Make_ID__c</fullName>
        <inlineHelpText>Make Id</inlineHelpText>
        <label>Make ID</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <inlineHelpText>What make of Blimp?</inlineHelpText>
        <label>Make</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Id__c</fullName>
        <inlineHelpText>Model Id</inlineHelpText>
        <label>Model Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <inlineHelpText>Model of Blimp</inlineHelpText>
        <label>Model</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <indexes>
        <fullName>Blimp_Index</fullName>
        <fields>
            <name>Make_ID__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <fields>
            <name>Model_Id__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <label>Blimp Index</label>
    </indexes>
</CustomObject>